# codetutor

./: '  .env.testing  .gitignore  .pylintrc  .travis.yml  Dockerfile  Makefile  bitbucket-pipelines.yml  commit.sh  create_admin_user.py  docker-compose.yml  envs.toml  piccolo_conf.py  pyproject.toml  run_migrations.py  start.sh
.vim/: coc-settings.json
scripts/: fresh_database_and_tables.sh  lint_format.sh  test.sh
src/: .env  None  exceptions.py  logging_config.json  main.py  piccolo_conf.py  prestart.sh
src/api/profile/: routes.py  schemas.py
src/api/users/: routes.py  schemas.py
src/api/videos/: routes.py  schemas.py
src/config/: settings.py
src/custom_logging/: custom_logging.py
src/models/: blacklistjwt.py  course.py  piccolo_app.py  user_profile.py
src/models/piccolo_migrations/: 2021-03-13T17-26-39.py  2021-03-13T17-27-58.py  2021-03-14T19-01-37.py  2021-03-31T13-10-39.py
src/schemas/: courses.py  profile.py  user.py
src/services/: auth.py  courses.py  profile.py
src/tests/db/: test_db.py
src/tests/routes/: test_root_url.py
src/utils/: auth.py  video.py  video_parser.py
tests/api/: test_root_url.py
tests/api/test_auth/: test_get_token.py  test_register.py
